--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,6 @@
 }
 
 .contents {
-  padding: 50px 0;
   margin: 0 auto 50px;
 }
 
@@ -79,12 +78,18 @@
 
 .text {
   max-width: 1000px;
-  margin: 0 auto;
+  margin: 0 auto ;
   text-align: left;
   font-size: 20px;
   line-height: 2;
   text-align: center;
   font-weight: bold;
+}
+
+li{
+  margin: 0 0 10px;
+  width: 360px;
+  text-align: center;
 }
 
 .footer {
@@ -134,7 +139,7 @@
 /* form */
 form {
   width: 500px;
-  margin: 0 auto;
+  margin: 0 auto 3pc;
   border: 1px solid #000;
   padding: 15px;
 }
