--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,9 @@
 }
 
 .contents {
-  margin: 0 auto 50px;
+  margin: 0 auto 20px;
+  text-align: center;
+  font-size: 20px;
 }
 
 .title {
@@ -79,11 +81,9 @@
 .text {
   max-width: 1000px;
   margin: 0 auto ;
-  text-align: left;
   font-size: 20px;
-  line-height: 2;
+  line-height: 1.5;
   text-align: center;
-  font-weight: bold;
 }
 
 li{
